# tutela

./: .env.example  .gitignore  ARCHITECTURE.md  ASSUMPTIONS.md  Anchor.toml  Cargo.toml  DEPLOY_RUNBOOK.md  HACKATHON_ALIGNMENT.md  IMPLEMENTATION_PLAN.md  README.md  TASKS.md  TUTELA_HANDOFF.md  package.json  pnpm-lock.yaml
apps/indexer/: package.json  tsconfig.json
apps/indexer/src/: repository.ts  server.ts
apps/keeper/: package.json
apps/keeper/src/: index.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/activity/: page.tsx
apps/web/components/: interactive-market-composer.tsx  landing-infrastructure-sections.tsx
apps/web/lib/: demo.ts  live.ts  welcome.ts
apps/web/providers/: providers.tsx  tutela-auth-provider.tsx  wallet-provider.tsx
docs/: demo-script.md  devnet-evidence.md  product-strategy.md  security.md  smart-contracts.md  troubleshooting.md  txline-integration.md  vercel-deployment.md
programs/mock-verifier/: Cargo.toml
programs/mock-verifier/src/: lib.rs
programs/tutela/: Cargo.toml
programs/tutela/src/: lib.rs
scripts/: create-test-mint.ts  devnet-evidence.ts  run-demo-refund.ts  run-demo-settlement.ts  seed-demo.ts  validate-environment.ts  verify-devnet.ts
scripts/txline/: activate.ts  package.json  tsconfig.json
scripts/txline/idl/: txoracle.devnet.json
tests/anchor/: tutela.test.ts
tests/e2e/: smoke.spec.ts
tests/integration/: condition-engine.test.ts  txline-security.test.ts
(+24 files in other folders)
