[package]
name = "tutela"
version = "0.1.0"
description = "Tutela devnet parametric football markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tutela"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
sha2 = { workspace = true }
